--- a/src/components/community/aq-community-home-post-item2.html
+++ b/src/components/community/aq-community-home-post-item2.html
@@ -230,7 +230,7 @@
       },
 
       goToDetail: function() {
-        this.fire('rt-changed',{route:'/dashboard/community/topics/' + this.thread._id});
+        this.fire('rt-changed',{route:'/dashboard/community/' + this.thread._id});
       },
 
       getLastReplyDetails: function(thread) {
